# qt5_billings

./: README.md  pyproject.toml
src/qt5_billing/: main.py
