[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qt5_billing"
version = "0.0.1"
authors = [
  { name="Durlav Paul", email="durlavpaul31@gmail.com" },
]

dependencies = [
  'pyqt5',
]

description = "Infoware Billings Utility"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
qt5_billing = 'qt5_billing.main:main'


